Add Archivable feature with migration, documentation, and generator
Includes:
- Migration for adding `archived_at`, `archived_by_id`, and `archive_reason` columns to Articles.
- Archivable module with methods for archiving/restoring and scope definitions.
- Detailed documentation for usage, configuration, and best practices.
- Generator for auto-creating migrations with optional tracking fields.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,19 @@
 /test/dummy/storage/
 /test/dummy/tmp/
 /coverage/
+
+# Gem builds
+*.gem
+
+# macOS
+.DS_Store
+
+# IDEs
+.idea/
+.vscode/
+
+# Editor backups
+*.swp
+*.swo
+*~
+*.bak
